--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       // set padding and spacing
       let topPadding, showMainTitle, showSubtitle1, showAxesLabels,
         subtitle2Padding, subtitle2FontSize, subtitle2Text, chart_area_padding,
-        chart_area_width, chart_area_height, xTickFormat;
+        chart_area_width, chart_area_height, xTickFormat, y_axis_ticks;
 
       if (size == "small") {
         topPadding = 62,
@@ -75,7 +75,8 @@
           },
           chart_area_width = 460 * .5,
           chart_area_height = 400 * .5,
-          xTickFormat = "%-I";
+          xTickFormat = "%-I",
+          y_axis_ticks = [0, 40, 80, 120];
       } else {
         topPadding = 90,
           showMainTitle = true,
@@ -92,7 +93,8 @@
           },
           chart_area_width = 460,
           chart_area_height = 400,
-          xTickFormat = "%-I %p";
+          xTickFormat = "%-I %p",
+          y_axis_ticks = [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120];
       }
 
       let titleAdjustLeft = 10,
@@ -212,7 +214,9 @@
           let y_axis = graph_elems
             .append('g')
             .attr("id", "y_axis")
-            .call(d3.axisLeft(y));
+            .call(d3.axisLeft(y)
+              .tickValues(y_axis_ticks)
+            );
 
           // format data for appropriate display
           function formatData(rowOfData) {
