--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
       // set padding and spacing
       let topPadding, showMainTitle, showSubtitle1, showAxesLabels,
         subtitle2Padding, subtitle2FontSize, subtitle2Text, chart_area_padding,
-        chart_area_width, chart_area_height, xTickFormat, y_axis_ticks;
+        chart_area_width, chart_area_height, xTickFormat, y_axis_ticks,
+        point_radius;
 
       if (size == "small") {
         topPadding = 62,
@@ -76,7 +77,8 @@
           chart_area_width = 460 * .5,
           chart_area_height = 400 * .5,
           xTickFormat = "%-I",
-          y_axis_ticks = [0, 40, 80, 120];
+          y_axis_ticks = [0, 40, 80, 120],
+          point_radius = 0.4;
       } else {
         topPadding = 90,
           showMainTitle = true,
@@ -94,7 +96,8 @@
           chart_area_width = 460,
           chart_area_height = 400,
           xTickFormat = "%-I %p",
-          y_axis_ticks = [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120];
+          y_axis_ticks = [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120],
+          point_radius = 1;
       }
 
       let titleAdjustLeft = 10,
@@ -256,7 +259,7 @@
             })
             .attr("class", "data_point")
             .attr("fill", "rgb(63,72,204)")
-            .attr("r", 1);
+            .attr("r", point_radius);
 
           if (animate) {
             // animate data points to travel to their y-coordinate location from the bottom
