--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
         subtitle2Padding = 66,
         subtitle2FontSize = 11,
         subtitle2Text = "For a Typical Day in " + bikeDataMonthName + ' ' + bikeDataYear,
-        chart_area_padding = {
+        chartAreaPadding = {
           top: 90,
           right: 30,
           bottom: 70,
           left: 65
         },
-        chart_area_width = 460,
-        chart_area_height = 400,
-        xTickFormat = "%-I %p",
-        y_axis_ticks = [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120],
-        point_radius = 1;
+        chartAreaWidth = 460,
+        chartAreaHeight = 400,
+        xAxisTickFormat = "%-I %p",
+        yAxisTickInterval = [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120],
+        dataPointRadius = 1;
 
 
       if (size == "small") { // adjust these if creating a small version of plot
@@ -81,22 +81,22 @@
           subtitle2Padding = 32,
           subtitle2FontSize = 30,
           subtitle2Text = bikeDataMonthName,
-          chart_area_padding = {
+          chartAreaPadding = {
             top: 48,
             right: 11,
             bottom: 25,
             left: 29
           },
-          chart_area_width = 460 * .5,
-          chart_area_height = 400 * .5,
-          xTickFormat = "%-I",
-          y_axis_ticks = [0, 40, 80, 120],
-          point_radius = 0.4;
+          chartAreaWidth = 460 * .5,
+          chartAreaHeight = 400 * .5,
+          xAxisTickFormat = "%-I",
+          yAxisTickInterval = [0, 40, 80, 120],
+          dataPointRadius = 0.4;
       }
 
       let titleAdjustLeft = 10,
-        graph_width = chart_area_width - chart_area_padding.left - chart_area_padding.right,
-        graph_height = chart_area_height - chart_area_padding.top - chart_area_padding.bottom;
+        graph_width = chartAreaWidth - chartAreaPadding.left - chartAreaPadding.right,
+        graph_height = chartAreaHeight - chartAreaPadding.top - chartAreaPadding.bottom;
 
       // add chart div
       let chart = chart_area
@@ -108,14 +108,14 @@
         .append("svg")
         .attr("id", "chart_background")
         .attr("style", "background: lightgrey")
-        .attr("width", chart_area_width)
-        .attr("height", chart_area_height);
+        .attr("width", chartAreaWidth)
+        .attr("height", chartAreaHeight);
 
       if (showMainTitle) {
         // add chart main title
         chart_background.append("text")
           .attr("text-anchor", "middle")
-          .attr("x", (graph_width / 2) + chart_area_padding.left - titleAdjustLeft)
+          .attr("x", (graph_width / 2) + chartAreaPadding.left - titleAdjustLeft)
           .attr("y", 30)
           .attr("font-size", 17)
           .text("Bluebike Trip Duration By Time Of Day");
@@ -125,7 +125,7 @@
         // add chart subtitle
         chart_background.append("text")
           .attr("text-anchor", "middle")
-          .attr("x", (graph_width / 2) + chart_area_padding.left - titleAdjustLeft)
+          .attr("x", (graph_width / 2) + chartAreaPadding.left - titleAdjustLeft)
           .attr("y", 50)
           .attr("font-size", 11)
           .text("All  Rides in Boston, Cambridge, Brookline, Somerville");
@@ -134,7 +134,7 @@
       // add chart third title
       chart_background.append("text")
         .attr("text-anchor", "middle")
-        .attr("x", (graph_width / 2) + chart_area_padding.left - titleAdjustLeft)
+        .attr("x", (graph_width / 2) + chartAreaPadding.left - titleAdjustLeft)
         .attr("y", subtitle2Padding)
         .attr("font-size", subtitle2FontSize)
         .text(subtitle2Text);
@@ -143,16 +143,16 @@
         // add x-axis label
         chart_background.append("text")
           .attr("text-anchor", "middle")
-          .attr("x", (graph_width / 2) + chart_area_padding.left)
-          .attr("y", graph_height + chart_area_padding.top + 56)
+          .attr("x", (graph_width / 2) + chartAreaPadding.left)
+          .attr("y", graph_height + chartAreaPadding.top + 56)
           .text("Trip Start Time");
 
         // add y-axis label
         chart_background.append("text")
           .attr("text-anchor", "middle")
           .attr("transform", "rotate(-90)")
-          .attr("y", chart_area_padding.left / 2 - 5)
-          .attr("x", -chart_area_padding.top - graph_height / 2)
+          .attr("y", chartAreaPadding.left / 2 - 5)
+          .attr("x", -chartAreaPadding.top - graph_height / 2)
           .text("Trip Duration (Minutes)")
       }
 
@@ -160,7 +160,7 @@
       let graph_elems = chart_background
         .append("g")
         .attr("id", "graph_elems")
-        .attr("transform", "translate(" + chart_area_padding.left + "," + chart_area_padding.top + ")");
+        .attr("transform", "translate(" + chartAreaPadding.left + "," + chartAreaPadding.top + ")");
 
       // read data
       d3.csv(csvFileName).then((bike_data) => {
@@ -191,7 +191,7 @@
             .attr("transform", "translate(0," + graph_height + ")")
             .call(d3.axisBottom(x)
               .tickValues(x_axis_ticks)
-              .tickFormat(d3.timeFormat(xTickFormat)))
+              .tickFormat(d3.timeFormat(xAxisTickFormat)))
             .selectAll("text")
             .style("text-anchor", "end")
             .attr("dx", "-.8em")
@@ -212,7 +212,7 @@
             .append('g')
             .attr("id", "y_axis")
             .call(d3.axisLeft(y)
-              .tickValues(y_axis_ticks)
+              .tickValues(yAxisTickInterval)
             );
 
           // format data for appropriate display
@@ -253,7 +253,7 @@
             })
             .attr("class", "data_point")
             .attr("fill", "rgb(63,72,204)")
-            .attr("r", point_radius);
+            .attr("r", dataPointRadius);
 
           if (animate) {
             // animate data points to travel to their y-coordinate location from the bottom
