--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           showSubtitle1 = false,
           showAxesLabels = false,
           subtitle2Padding = 32,
-          subtitle2FontSize = 30,
+          subtitle2FontSize = 27,
           subtitle2Text = bikeDataMonthName,
           chartAreaPadding = {
             top: 48,
@@ -159,16 +159,19 @@
       if (showMainTitle) {
         // add chart main title
         chart_background.append("text")
+          .attr("font-family", "sans-serif, Arial, Helvetica")
           .attr("text-anchor", "middle")
           .attr("x", (graph_width / 2) + chartAreaPadding.left - titleAdjustLeft)
           .attr("y", 30)
-          .attr("font-size", 17)
+          .attr("font-size", 22)
+          .attr("font-family", "Helvetica")
           .text("Bluebike Trip Duration By Time Of Day");
       }
 
       if (showSubtitle1) {
         // add chart subtitle
         chart_background.append("text")
+          .attr("font-family", "sans-serif, Arial, Helvetica")
           .attr("text-anchor", "middle")
           .attr("x", (graph_width / 2) + chartAreaPadding.left - titleAdjustLeft)
           .attr("y", 50)
@@ -178,6 +181,7 @@
 
       // add chart third title
       chart_background.append("text")
+        .attr("font-family", "sans-serif, Arial, Helvetica")
         .attr("text-anchor", "middle")
         .attr("x", (graph_width / 2) + chartAreaPadding.left - titleAdjustLeft)
         .attr("y", subtitle2Padding)
@@ -187,6 +191,7 @@
       if (showAxesLabels) {
         // add x-axis label
         chart_background.append("text")
+          .attr("font-family", "sans-serif, Arial, Helvetica")
           .attr("text-anchor", "middle")
           .attr("x", (graph_width / 2) + chartAreaPadding.left)
           .attr("y", graph_height + chartAreaPadding.top + 56)
@@ -194,6 +199,7 @@
 
         // add y-axis label
         chart_background.append("text")
+          .attr("font-family", "sans-serif, Arial, Helvetica")
           .attr("text-anchor", "middle")
           .attr("transform", "rotate(-90)")
           .attr("y", chartAreaPadding.left / 2 - 5)
