add title, adjust styling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 
   <!-- div that will contain visualization -->
+  <h1>A City In</h1>
+  <h1>Motion</h1>
   <div id="main_chart_area"></div>
   <div id="small_mult_chart_area">
     <table id="small_mult_table">
@@ -152,7 +154,7 @@
       let chart_background = chart
         .append("svg")
         .attr("id", "chart_background")
-        .attr("style", "background: lightgrey")
+        .attr("style", "background: rgb(253,253,253)")
         .attr("width", chartAreaWidth)
         .attr("height", chartAreaHeight);
 
