--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         showAxesLabels = true,
         subtitle2Padding = 66,
         subtitle2FontSize = 11,
-        subtitle2Text = "For a Typical Day in " + bikeDataMonthName + ' ' + bikeDataYear,
+        subtitle2Text = "For a Typical Day in " + bikeDataMonthName + ', ' + bikeDataYear,
         chartAreaPadding = {
           top: 95,
           right: 30,
