--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- div that will contain visualization -->
   <h1>A City In</h1>
   <h1>Motion</h1>
+  <h2>Boston's Bluebike system supports more than 12,000 rides per day throughout Boston, Cambridge, Brookline, and Somerville. </h2>
   <div id="main_chart_area"></div>
   <div id="small_mult_chart_area">
     <table id="small_mult_table">
