add two more descriptive texts

--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
     </table>
   </div>
 
+  <div id="small_mult_chart_descript_cont">
+    <h2 id="small_mult_chart_descript">Bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla</h2>
+  </div>
+  <div id="bottom_descript_cont">
+    <h2 id="bottom_descript">Bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla</h2>
+  </div>
   <script>
     // function to generate a scatter plot, given the name of an accessible csv
     // file with appropriately formatted data, the ID of an HTML element into
