--- a/index.html
+++ b/index.html
@@ -365,6 +365,14 @@
       generateScatter("201910-bluebikes-tripdata.csv", "item10", "small", false);
       generateScatter("201911-bluebikes-tripdata.csv", "item11", "small", false);
       generateScatter("201912-bluebikes-tripdata.csv", "item12", "small", false);
+
+      // remove hidden from the two
+      d3.select("#small_mult_chart_descript")
+        .style("opacity", 1);
+
+      d3.select("#bottom_descript")
+        .style("opacity", 1);
+
     }
 
     setTimeout(genRestOfScatters, 11000);
