--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <h2 id="mainSubtitle">Boston's Bluebike system supports more than 12,000 rides per day throughout Boston, Cambridge, Brookline, and Somerville. </h2>
   <div id="main_chart_area"></div>
   <div id="small_mult_chart_area">
+    <div id="small_mult_chart_title">Blue Bike Duration by Time of Day</div>
+    <div id="small_mult_chart_title2">All Rides in Greater Boston for an Average Day in Each Month (2019)</div>
     <table id="small_mult_table">
       <tr>
         <td>
@@ -60,6 +62,10 @@
         </td>
       </tr>
     </table>
+
+    <div id="sm_mult_y_axis_label">Trip Duration (Minutes)</div>
+    <div id="sm_mult_x_axis_label">Start Time</div>
+
   </div>
 
   <div id="small_mult_chart_descript_cont">
@@ -366,11 +372,23 @@
       generateScatter("201911-bluebikes-tripdata.csv", "item11", "small", false);
       generateScatter("201912-bluebikes-tripdata.csv", "item12", "small", false);
 
-      // remove hidden from the two
+      // display associated labelling
       d3.select("#small_mult_chart_descript")
         .style("opacity", 1);
 
       d3.select("#bottom_descript")
+        .style("opacity", 1);
+
+      d3.select("#small_mult_chart_title")
+        .style("opacity", 1);
+
+      d3.select("#small_mult_chart_title2")
+        .style("opacity", 1);
+
+      d3.select("#sm_mult_x_axis_label")
+        .style("opacity", 1);
+
+      d3.select("#sm_mult_y_axis_label")
         .style("opacity", 1);
 
     }
