adjust labels and formatting

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </table>
 
     <div id="sm_mult_y_axis_label">Trip Duration (Minutes)</div>
-    <div id="sm_mult_x_axis_label">Start Time</div>
+    <div id="sm_mult_x_axis_label">Start Time (12am-12am)</div>
 
   </div>
 
