small mult description and styling

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
   </div>
 
   <div id="small_mult_chart_descript_cont">
-    <h2 id="small_mult_chart_descript">Bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla</h2>
+    <h2 id="small_mult_chart_descript">The small multiples chart to the left displays scatterplots of average daily Bluebike rides for each month of 2019. Each point represents a single Bluebike ride, with its x-coordinate representing the start time
+      and y-coordinate its duration in minutes. The data points included are a random subset of all rides taken during that month, such that the total number of points correspond to the average rides taken per day in that month. Outliers falling
+      outside a duration of 120 minutes are excluded, as are rides less than 1 minute.</h2>
   </div>
   <div id="bottom_descript_cont">
     <h2 id="bottom_descript">Bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla</h2>
