--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
   </div>
 
   <div id="small_mult_chart_descript_cont">
-    <h2 id="small_mult_chart_descript">The small multiple chart to the left displays scatterplots of average daily Bluebike rides for each month of 2019. Each point represents a single Bluebike ride, with its x-coordinate representing the start time
-      and y-coordinate its duration in minutes. The data points included are a random subset of all rides taken during that month, such that the total number of points correspond to the average rides taken per day in that month. Outliers falling
+    <h2 class="small_mult_chart_descript1">The small multiple chart to the left displays scatterplots of average daily Bluebike rides for each month of 2019. Each point represents a single Bluebike ride, with its x-coordinate representing the start
+      time
+      and y-coordinate its duration in minutes. </h2>
+    <h2 class="small_mult_chart_descript2">The data points included are a random subset of all rides taken during that month, such that the total number of points correspond to the average rides taken per day in that month. Outliers falling
       outside a duration of 120 minutes are excluded, as are rides less than 1 minute.</h2>
   </div>
   <div id="bottom_descript_cont">
@@ -384,7 +386,11 @@
       generateScatter("201912-bluebikes-tripdata.csv", "item12", "small", false);
 
       // display associated labelling
-      d3.select("#small_mult_chart_descript")
+      d3.select(".small_mult_chart_descript1")
+        .style("opacity", 1);
+
+      // display associated labelling
+      d3.select(".small_mult_chart_descript2")
         .style("opacity", 1);
 
       d3.select("#bottom_descript")
