--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       Summer and fall months tend to have the most daily rides, while fewer daily rides occur in December through March. Rides in these months also tend to be shorter in duration, proably because of colder weather.
 
-      Regardless of month, however, there are always a substantial number of Bluebike riders, many of whom likely use the system for daily work commutes. Bikes are used by tens of thousands and contribute
+      Regardless of month, however, there are always a substantial number of Bluebike riders, many of whom likely use the system for daily work commutes. In addition to being equitable, sustainable, and healthful, bikes are used by tens of thousands
       to the rich ecosystem of urban transportation.
 
       https://www.bluebikes.com/about/media-kit</h2>
