--- a/index.html
+++ b/index.html
@@ -77,12 +77,13 @@
   </div>
   <div id="bottom_descript_cont">
     <h2 id="bottom_descript1">The scatterplot small multiple illustrates patterns in Bluebikes usage across months as well as unique characteristics within months. We can see that, overall, Bluebikes tend to be used between 6am and 10pm, with the
-      majority of rides between 8am and 8pm. Those rides closer to the middle of the day are more likely to be of longer duration; e.g., longer than 40 minutes. Across months we can also see slightly larger clusters of rides occurring around 8am and
+      majority of rides between 8am and 8pm. Those rides closer to the middle of the day are more likely to be of longer duration; e.g., longer than 40 minutes. Across months we can also see slightly larger and longer clusters of rides occurring
+      around 8am and
       6pm, probably corresponding to commutes to and from work.</h2>
-    <h2 id="bottom_descript2">Summer and fall months tend to have the most daily rides, while fewer daily rides occur in December through March. Rides in these months also tend to be shorter in duration, proably because of colder weather.
+    <h2 id="bottom_descript2">Summer and fall months tend to have the most daily rides, while fewer daily rides occur in December through March. Rides in these latter months also tend to be shorter in duration, proably because of colder weather.
 
-      Regardless of month, however, there are always a substantial number of Bluebike riders, many of whom likely use the system for daily work commutes. In addition to being equitable, sustainable, and healthful, bikes are used by tens of thousands
-      and contribute
+      Regardless of month, however, there are always a substantial number of Bluebike riders, many of whom likely use the system for daily work commutes. Used by tends of thousands, shared bikes are an equitable, sustainable, healthy, and
+      influential contributor
       to the rich ecosystem of urban transportation.
 
       <a href="https://www.bluebikes.com/about/media-kit">Learn more</a></h2>
