--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       to the rich ecosystem of urban transportation.
 
       <a href="https://www.bluebikes.com/about/media-kit">Learn more</a></h2>
+    <div class="img_cont"><img id="bluebikeimg" src="bluebikeimg.png" alt="bluebikeimg.jpg"></div>
   </div>
   <script>
     // function to generate a scatter plot, given the name of an accessible csv
@@ -410,6 +411,9 @@
         .style("opacity", 1);
 
       d3.select("#sm_mult_y_axis_label")
+        .style("opacity", 1);
+
+      d3.select("#bluebikeimg")
         .style("opacity", 1);
 
     }
