--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="main_chart_area"></div>
   <div id="small_mult_chart_area">
     <div id="small_mult_chart_title">Blue Bike Duration by Time of Day</div>
-    <div id="small_mult_chart_title2">All Rides in Greater Boston for an Average Day in Each Month (2019)</div>
+    <div id="small_mult_chart_title2">All Rides in Greater Boston During an Average Day in Each Month, 2019</div>
     <table id="small_mult_table">
       <tr>
         <td>
@@ -64,7 +64,7 @@
     </table>
 
     <div id="sm_mult_y_axis_label">Trip Duration (Minutes)</div>
-    <div id="sm_mult_x_axis_label">Start Time (12am-12am)</div>
+    <div id="sm_mult_x_axis_label">Start Time</div>
 
   </div>
 
@@ -72,13 +72,13 @@
     <h2 class="small_mult_chart_descript1">The small multiple chart to the left displays scatterplots of average daily Bluebike rides for each month of 2019. Each point represents a single Bluebike ride, with its x-coordinate representing the start
       time
       and y-coordinate its duration in minutes. </h2>
-    <h2 class="small_mult_chart_descript2">The data points included are a random subset of all rides taken during that month, such that the total number of points correspond to the average rides taken per day in that month. Outliers falling
-      outside a duration of 120 minutes are excluded, as are rides less than 1 minute.</h2>
+    <h2 class="small_mult_chart_descript2">The data points included are a random subset of all rides taken during that month, such that the total number of points correspondes to the average rides taken per day in that month. Outliers falling
+      outside a duration of 120 minutes are excluded as are rides less than 1 minute long.</h2>
   </div>
   <div id="bottom_descript_cont">
-    <h2 id="bottom_descript1">The scatterplot small multiple illustrates patterns in Bluebikes usage across months as well as unique characteristics within months. We can see that, overall, Bluebikes tend to be used between 6am and 10pm, with the
+    <h2 id="bottom_descript1">The scatterplot small multiple illustrates patterns in Bluebikes usage across months as well as unique characteristics within months. We can see that, overall, Bluebikes tend to be used between 6am and 10pm with the
       majority of rides between 8am and 8pm. Those rides closer to the middle of the day are more likely to be of longer duration; e.g., longer than 40 minutes. Across months we can also see slightly larger and longer clusters of rides occurring
-      around 8am and
+      around 8am as well as around
       6pm, probably corresponding to commutes to and from work.</h2>
     <h2 id="bottom_descript2">Summer and fall months tend to have the most daily rides, while fewer daily rides occur in December through March. Rides in these latter months also tend to be shorter in duration, proably because of colder weather.
 
