--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           },
           chartAreaWidth = 460 * .35,
           chartAreaHeight = 400 * .35,
-          xAxisTickFormat = "%-I",
+          xAxisTickFormat = "%H",
           yAxisTickInterval = [0, 40, 80, 120],
           dataPointRadius = 0.4;
       }
