fix carriage return thing

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
 
   <!-- div that will contain visualization -->
-  <h1>A City In</h1>
-  <h1>Motion</h1>
+  <h1>A City In<br>Motion</h1>
   <h2 id="mainSubtitle">Boston's Bluebike system supports more than 12,000 rides per day throughout Boston, Cambridge, Brookline, and Somerville. </h2>
   <div id="main_chart_area"></div>
   <div id="small_mult_chart_area">
