add explanation for horizontal line

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="main_chart_area"></div>
   <div id="small_mult_chart_area">
     <div id="small_mult_chart_title">Blue Bike Duration by Time of Day</div>
-    <div id="small_mult_chart_title2">All Rides in Greater Boston During an Average Day in Each Month, 2019</div>
+    <div id="small_mult_chart_title2">All Rides in Greater Boston During an Average Day in Each Month, 2019<br>(horizontal line indicates trip duration mean, sans outliers)</div>
     <table id="small_mult_table">
       <tr>
         <td>
