--- a/index.html
+++ b/index.html
@@ -17,52 +17,28 @@
   <div id="small_mult_chart_area">
     <div id="small_mult_chart_title">Blue Bike Duration by Time of Day</div>
     <div id="small_mult_chart_title2">All Rides in Greater Boston During an Average Day in Each Month, 2019<br>(horizontal line indicates trip duration mean, sans outliers)</div>
-    <table id="small_mult_table">
-      <tr>
-        <td>
+    <div id="small_mult_table">
+      <div>
           <div id="item1"></div>
-        </td>
-        <td>
           <div id="item2"></div>
-        </td>
-        <td>
           <div id="item3"></div>
-        </td>
-      </tr>
-      <tr>
-        <td>
+      </div>
+      <div>
           <div id="item4"></div>
-        </td>
-        <td>
           <div id="item5"></div>
-        </td>
-        <td>
           <div id="item6"></div>
-        </td>
-      </tr>
-      <tr>
-        <td>
+      </div>
+      <div>
           <div id="item7"></div>
-        </td>
-        <td>
           <div id="item8"></div>
-        </td>
-        <td>
           <div id="item9"></div>
-        </td>
-        <tr>
-          <td>
+        <div>
             <div id="item10"></div>
-          </td>
-              <td>
                 <div id="item11"></div>
-              </td>
-              <td>
                 <div id="item12"></div>
-              </td>
-          </tr>
-    </table>
-
+          </div>
+    </div>
+    
     <div id="sm_mult_y_axis_label">Trip Duration (Minutes)</div>
     <div id="sm_mult_x_axis_label">Start Time</div>
 
