mess with spacing, beautify

--- a/index.html
+++ b/index.html
@@ -11,54 +11,70 @@
 <body>
 
   <!-- div that will contain visualization -->
-  <h1>A City In<br>Motion</h1>
-  <p id="mainSubtitle">Boston's Bluebike system supports more than 12,000 rides per day throughout Boston, Cambridge, Brookline, and Somerville. </p>
-  <div id="main_chart_area"></div>
-  <div id="small_mult_chart_area">
-    <div id="small_mult_chart_title">Blue Bike Duration by Time of Day</div>
-    <div id="small_mult_chart_title2">All Rides in Greater Boston During an Average Day in Each Month, 2019<br>(horizontal line indicates trip duration mean, sans outliers)</div>
-    <div id="small_mult_table">
-      <div>
+  <div id="panel1">
+    <div id="titles">
+      <h1>A City In<br>Motion</h1>
+      <p id="mainSubtitle">Boston's Bluebike system supports more than 12,000 rides per day throughout Boston, Cambridge, Brookline, and Somerville. </p>
+    </div>
+    <div id="mainChart">
+      <div id="main_chart_area_cont">
+        <div id="main_chart_area"></div>
+    </div>
+    </div>
+  </div>
+  <div id="panel2">
+    <div id="small_mult_chart_area">
+      <div id="small_mult_chart_title">Blue Bike Duration by Time of Day</div>
+      <div id="small_mult_chart_title2">All Rides in Greater Boston During an Average Day in Each Month, 2019<br>(horizontal line indicates trip duration mean, sans outliers)</div>
+      <div id="small_mult_table">
+        <div>
           <div id="item1"></div>
           <div id="item2"></div>
           <div id="item3"></div>
-      </div>
-      <div>
+        </div>
+        <div>
           <div id="item4"></div>
           <div id="item5"></div>
           <div id="item6"></div>
-      </div>
-      <div>
+        </div>
+        <div>
           <div id="item7"></div>
           <div id="item8"></div>
           <div id="item9"></div>
-        <div>
+          <div>
             <div id="item10"></div>
-                <div id="item11"></div>
-                <div id="item12"></div>
+            <div id="item11"></div>
+            <div id="item12"></div>
           </div>
+        </div>
+
+        <div id="sm_mult_y_axis_label">Trip Duration (Minutes)</div>
+        <div id="sm_mult_x_axis_label">Start Time</div>
+
+      </div>
     </div>
-    
-    <div id="sm_mult_y_axis_label">Trip Duration (Minutes)</div>
-    <div id="sm_mult_x_axis_label">Start Time</div>
 
-  </div>
-
-  <div id="small_mult_chart_descript_cont">
-    <p class="small_mult_chart_descript1">The small multiple chart to the left displays scatterplots of average daily Bluebike rides for each month of 2019. Each point represents a single Bluebike ride, with its x-coordinate representing the start time and y-coordinate its duration in minutes.
-    </p>
-    <p class="small_mult_chart_descript2">The data points included are a random subset of all rides taken during that month, such that the total number of points correspondes to the average rides taken per day in that month. Outliers falling outside a duration of 120 minutes are excluded as are rides less than 1 minute long.
-    </p>
-  </div>
-  <div id="bottom_descript_cont">
-    <p id="bottom_descript1">The scatterplot small multiple illustrates patterns in Bluebikes usage across months as well as unique characteristics within months. We can see that, overall, Bluebikes tend to be used between 6am and 10pm with the majority of rides between 8am and 8pm. Those rides closer to the middle of the day are more likely to be of longer duration; e.g., longer than 40 minutes. Across months we can also see slightly larger and longer clusters of rides occurring around 8am as well as around 6pm, probably corresponding to commutes to and from work.
-    </p>
-    <p id="bottom_descript2">Summer and fall months tend to have the most daily rides, while fewer daily rides occur in December through March. Rides in these latter months also tend to be shorter in duration, proably because of colder weather. Regardless of month, however, there are always a substantial number of Bluebike riders, many of whom likely use the system for daily work commutes. Used by tends of thousands, shared bikes are an equitable, sustainable, healthy, and influential contributor to the rich ecosystem of urban transportation.
-      <a href="https://www.bluebikes.com/about/media-kit">Learn more
-      </a>
-    </p>
-  </div>
-  <script src="generateScatters.js"></script>
+    <div id="small_mult_chart_descript_cont">
+      <p class="small_mult_chart_descript1">The small multiple chart to the left displays scatterplots of average daily Bluebike rides for each month of 2019. Each point represents a single Bluebike ride, with its x-coordinate representing the start
+        time and y-coordinate its duration in minutes.
+      </p>
+      <p class="small_mult_chart_descript2">The data points included are a random subset of all rides taken during that month, such that the total number of points correspondes to the average rides taken per day in that month. Outliers falling
+        outside a duration of 120 minutes are excluded as are rides less than 1 minute long.
+      </p>
+    </div>
+    <div id="bottom_descript_cont">
+      <p id="bottom_descript1">The scatterplot small multiple illustrates patterns in Bluebikes usage across months as well as unique characteristics within months. We can see that, overall, Bluebikes tend to be used between 6am and 10pm with the
+        majority of rides between 8am and 8pm. Those rides closer to the middle of the day are more likely to be of longer duration; e.g., longer than 40 minutes. Across months we can also see slightly larger and longer clusters of rides occurring
+        around 8am as well as around 6pm, probably corresponding to commutes to and from work.
+      </p>
+      <p id="bottom_descript2">Summer and fall months tend to have the most daily rides, while fewer daily rides occur in December through March. Rides in these latter months also tend to be shorter in duration, proably because of colder weather.
+        Regardless of month, however, there are always a substantial number of Bluebike riders, many of whom likely use the system for daily work commutes. Used by tends of thousands, shared bikes are an equitable, sustainable, healthy, and
+        influential contributor to the rich ecosystem of urban transportation.
+        <a href="https://www.bluebikes.com/about/media-kit">Learn more
+        </a>
+      </p>
+    </div>
+    <script src="generateScatters.js"></script>
 </body>
 
 </html>
