add spacing between sections

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <!-- div that will contain visualization -->
-  <div class="flex-container">
+  <div id="panel1" class="flex-container">
     <div id="mainText">
       <h1>A City In Motion</h1>
       <p id="mainSubtitle">Boston's Bluebike system supports more than 12,000 rides per day throughout Boston, Cambridge, Brookline, and Somerville. </p>
