--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="small_mult_chart_area">
       <p id="small_mult_chart_title">Blue Bike Duration by Time of Day</p>
-      <p id="small_mult_chart_title2">Tip Duration (Min) of All Rides in Greater Boston During an Average Day in Each Month, 2019 (horizontal line indicates trip duration mean, sans outliers)</p>
+      <p id="small_mult_chart_title2">Trip Duration (Min) of All Rides in Greater Boston During an Average Day in Each Month, 2019 (horizontal line indicates trip duration mean, sans outliers)</p>
 
 <div id="small_mult_table_cont">
 
